--- a/sqlalchemy-challenge.ipynb
+++ b/sqlalchemy-challenge.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
       "text/plain": "'Unique stations in dataset: 7'"
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 78
     }
    ],
    "source": [
@@ -214,22 +214,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "             Count\nstation           \nUSC00519397    360\nUSC00519281    351\nUSC00516128    348\nUSC00513117    342\nUSC00519523    336\nUSC00514830    304\nUSC00517948    182",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Count</th>\n    </tr>\n    <tr>\n      <th>station</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>USC00519397</th>\n      <td>360</td>\n    </tr>\n    <tr>\n      <th>USC00519281</th>\n      <td>351</td>\n    </tr>\n    <tr>\n      <th>USC00516128</th>\n      <td>348</td>\n    </tr>\n    <tr>\n      <th>USC00513117</th>\n      <td>342</td>\n    </tr>\n    <tr>\n      <th>USC00519523</th>\n      <td>336</td>\n    </tr>\n    <tr>\n      <th>USC00514830</th>\n      <td>304</td>\n    </tr>\n    <tr>\n      <th>USC00517948</th>\n      <td>182</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 82
+    }
+   ],
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "df = pd.DataFrame(s.query(Measurement.station, Measurement.date).filter(Measurement.date > \"2016-08-23\"))\n",
+    "df.groupby(by='station').count().rename(columns={\"date\": \"Count\"}).sort_values(by=\"Count\",ascending=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 97,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Lowest temperature: 56.0 F\nHighest temperature: 87.0 F\nAverage temperature: 74.55 F\n"
+    }
+   ],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature of the most active station?\n"
+    "# highest temperature recorded, and average temperature of the most active station?\n",
+    "lowest_temp = s.query(Measurement.tobs).filter(Measurement.station == \"USC00519397\").order_by(Measurement.tobs).first()[0]\n",
+    "print(f\"Lowest temperature: {lowest_temp} F\")\n",
+    "highest_temp = s.query(Measurement.tobs).filter(Measurement.station == \"USC00519397\").order_by(Measurement.tobs.desc()).first()[0]\n",
+    "print(f\"Highest temperature: {highest_temp} F\")\n",
+    "from sqlalchemy.sql import func\n",
+    "average_temp = s.query(func.avg(Measurement.tobs).label('average temp')).filter(Measurement.station == \"USC00519397\").first()[0]\n",
+    "print(f\"Average temperature: {average_temp:.2f} F\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "74.55323054331865"
+     },
+     "metadata": {},
+     "execution_count": 95
+    }
+   ],
+   "source": [
+    "from sqlalchemy.sql import func\n",
+    "s.query(func.avg(Measurement.tobs).label('average temp')).filter(Measurement.station == \"USC00519397\").first()[0]"
    ]
   },
   {
